<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="show_empty_property_groups"
        android:summary="@string/pref_description_show_empty_property_groups"
        android:title="@string/pref_title_show_empty_property_groups" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="show_additional_properties_in_item"
        android:summary="@string/pref_description_show_additional_properties_in_item"
        android:title="@string/pref_title_show_additional_properties_in_item" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="show_quantity_before_item"
        android:summary="@string/pref_description_show_quantity_before_item"
        android:title="@string/pref_title_show_quantity_before_item" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="show_count_after_group"
        android:summary="@string/pref_description_show_count_after_group"
        android:title="@string/pref_title_show_count_after_group" />

</PreferenceScreen>
